force-app/main/default/objects/Objetivo_del_mes__c/Objetivo_del_mes__c.object-meta.xml
<CustomObject>
    <label>Objetivo del mes</label>
    <nameField>
        <label>Nombre de Objetivo del mes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objetivos del mes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>