force-app/main/default/objects/Objetivo_del_mes__c/fields/Comercializadora__c.field-meta.xml
<CustomField>
    <fullName>Comercializadora__c</fullName>
    <formula>Objetivo_De_Venta__r.Comercializadora__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comercializadora</label>
    <type>Text</type>
</CustomField>