force-app/main/default/objects/Objetivo_del_mes__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <label>Mes</label>
    <required>true</required>
    <type>Date</type>
</CustomField>