force-app/main/default/objects/Objetivo_del_mes__c/fields/Meta_en_dolares__c.field-meta.xml
<CustomField>
    <fullName>Meta_en_dolares__c</fullName>
    <label>Meta en dolares</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>