force-app/main/default/objects/Objetivo_del_mes__c/fields/Monto_actual_vendido__c.field-meta.xml
<CustomField>
    <fullName>Monto_actual_vendido__c</fullName>
    <label>Monto actual vendido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>