force-app/main/default/objects/Objetivo_del_mes__c/fields/Objetivo_De_Venta__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_De_Venta__c</fullName>
    <label>Objetivo De Venta</label>
    <referenceTo>Objetivo_De_venta__c</referenceTo>
    <relationshipLabel>Objetivos del mes</relationshipLabel>
    <relationshipName>Objetivos_del_mes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>