force-app/main/default/objects/Objetivo_del_mes__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <formula>Objetivo_De_Venta__r.Proyecto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proyecto</label>
    <type>Text</type>
</CustomField>